# AIChef2

./: .gitignore  README.md  pyproject.toml  temp_test_search.py  test_gen_image.py
app/: main.py  services.py
core/: config.py  generator.py
frontend/src/: Detail.tsx  Results.tsx
